@@ -1,4 +1,4 @@
 DIST skype-call-recorder-0.5.tar.gz 85650 RMD160 8ed0eee738ada6dc66bc83f7ade447ab5f7a30ac SHA1 d708ff629d7f6f37832779580238a9fef0f6304a SHA256 99595a6f252537fb6a7363caa0ad199488cc6d5ecaafc3a3011c2c024d0f1e1c
-EBUILD skype-call-recorder-0.5.ebuild 626 RMD160 8180015742b2897ae5e99d2ceddc5b472ac7c5ca SHA1 784b43635fdea24e300c1e75af33bb1155185a3e SHA256 ccc868013e10a5ea3d7c2aceb34d06ab52aef9baff3ed48e103d8ad78fd83748
-MISC ChangeLog 274 RMD160 7d5df9dcd991232b4ecd5f3fe7c7484d50a51786 SHA1 658412a975e40119b063c3c2b43e880b37ac8917 SHA256 7602ae59cf2f34e4122a858e18dcfcf8f9c10fe2d732c743a2ecf75b112383a3
+EBUILD skype-call-recorder-0.5.ebuild 651 RMD160 01e1d189d396aaf1f74ae521abf152f4133b5911 SHA1 0e9d9510a05f4204b97dea7498367a193f68fcdf SHA256 ffa4c917300a2d2616c41f05e5e39dd82c07b8c334a9a74bfa33b14607d28b80
+MISC ChangeLog 387 RMD160 e7efc1cc7821ae7cc8e80bf336e1ee3084d7d351 SHA1 6a91ef011c7962552d8adfe8475696526f7074e9 SHA256 45ac2fd381e5a77b8a68201fd3f31aa7fc1ed763d08938ac678ef277ebd76f35
 MISC metadata.xml 328 RMD160 628186acc0b2d1492740d555e5d571e01e5d8c31 SHA1 a686b24a0281a2db32efe5a17dcb324e67e380f7 SHA256 26fad18446e91245733d6b6c72f1fa6965f6b2e2bce080c573dc0325a1a14d9c
